# AmpliconClassifier

./: .gitignore  AC_config_parameters.md  LICENSE  README.md  TODO.md  ac_annotation.py  ac_io.py  ac_util.py  amplicon_classifier.py  amplicon_similarity.py  ecDNA_context.py  feature_similarity.py  get_ec_genes.py  get_genes.py  make_input.sh  make_results_table.py  patch_regions.tsv  pyproject.toml  radar_plotting.py  requirements.txt  softlink_images.py  sorted_background_scores_v0.txt  sorted_background_scores_v1.txt
ampclasslib/: _version.py  ac_annotation.py  ac_io.py  ac_util.py  amplicon_similarity.py  check_SV_support.py  chromoauxesis_ml.py  classification_records.py  config_params.py  convert_cycles_file.py  default_config.json  ecDNA_context.py  fan_ml.py  make_input.sh  profile_connections.py  read_support_utils.py  tid_filter.py
ampclasslib/resources/: patch_regions.tsv
docs/: dev_setup.md  fan_primer.md  parallelization_blockers.md
legacy_natgen_2020/: README.md  bfb_foldback_detection.py  classify_amplicon.py
resources/: combined_oncogene_list.txt  oncogene_list_ONGene.txt  patch_regions.tsv  sorted_background_scores.txt
scripts/: amplicons_intersecting_bed.py  find_patch_candidates.py  lift_AC_coords.py  make_sample_cnv_bed_map.sh  results_comparator.py  softlink_images.py
tests/: _pathfix.py  test_bfb_features.py  test_classification_records.py  test_lc_filtering.py  test_make_input.py  test_results_reporting.py  test_similarity_filtering.py
